# goat_cafe_bot

./: README.md  package-lock.json  package.json  server.js
ebot_description/: CMakeLists.txt  package.xml
ebot_description/launch/: goat_gazebo_launch.py  start_cafe_world_launch.py
ebot_nav2/: CMakeLists.txt  README.md  package.xml
ebot_nav2/config/: ekf.yaml  mapper_params_online_async.yaml  positions.yaml
ebot_nav2/launch/: ebot_ALL_scripts_launch.py  ebot_bringup_launch.py
ebot_nav2/maps/: map.pgm  map.yaml
ebot_nav2/msg/: Order.msg  State.msg
ebot_nav2/params/: nav2_params.yaml  nav2_params_DWB_Controller.yaml  nav2_simulation_best.yaml
ebot_nav2/rviz/: nav2_default_view.rviz
ebot_nav2/scripts/: confirmation_service.py  order_delivery_service.py  order_manager.py  order_or_cancel_service.py  set_initial_pose.py  state_updater_service.py
ebot_nav2/srv/: Confirmation.srv  Delivery.srv  OrderOrCancel.srv  StateUpdater.srv
goat_warehouse/: CMakeLists.txt  package.xml
goat_warehouse/models/cafe/: model.sdf
goat_warehouse/worlds/: goat_cafe.world
public/: customer.html  kitchen.html
